# hydra

./: CMakeLists.txt  LICENSE  README.md
PluginTest/: CMakeLists.txt  PluginFinder.cpp  TriSceneIndex.cpp  testHdTiny.cpp
include/: HdSimpleMesh.h  SceneIndexDemo.h  TriSceneIndex.h
src/: SceneIndexDemo.cpp  TriSceneIndex.cpp  main.cpp  test.cpp
